RESOLVED FIXED88644
Using BlobBuilder should show a deprecation warning message (if it is enabled)
https://bugs.webkit.org/show_bug.cgi?id=88644
Summary Using BlobBuilder should show a deprecation warning message (if it is enabled)
Kinuko Yasuda
Reported 2012-06-08 04:05:40 PDT
Using BlobBuilder should show a deprecation warning message. Mac has already disabled BlobBuilder, but Chrome is keeping it since it has been while since it has shipped it. FireFox starts showing a warning after Firefox 14. We should start showing deprecation warning message on Chromium (or on any platforms that enables BlobBuilder).
Attachments
Patch (4.66 KB, patch)
2012-06-08 04:09 PDT, Kinuko Yasuda
no flags
Patch (4.33 KB, patch)
2012-06-08 04:16 PDT, Kinuko Yasuda
no flags
Archive of layout-test-results from ec2-cr-linux-01 (542.53 KB, application/zip)
2012-06-08 06:18 PDT, WebKit Review Bot
no flags
Patch (5.17 KB, patch)
2012-06-08 07:12 PDT, Kinuko Yasuda
jianli: review+
Kinuko Yasuda
Comment 1 2012-06-08 04:09:24 PDT
Kinuko Yasuda
Comment 2 2012-06-08 04:16:03 PDT
WebKit Review Bot
Comment 3 2012-06-08 06:17:58 PDT
Comment on attachment 146537 [details] Patch Attachment 146537 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/12921512 New failing tests: fast/filesystem/file-metadata-after-write.html
WebKit Review Bot
Comment 4 2012-06-08 06:18:02 PDT
Created attachment 146550 [details] Archive of layout-test-results from ec2-cr-linux-01 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: ec2-cr-linux-01 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
Kinuko Yasuda
Comment 5 2012-06-08 07:12:25 PDT
Jian Li
Comment 6 2012-06-08 10:22:39 PDT
Comment on attachment 146561 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=146561&action=review > Source/WebCore/ChangeLog:9 > + We should start showing a warning to let people migrate to use Blob constructor. nit: migrate to using > Source/WebCore/fileapi/WebKitBlobBuilder.h:48 > + // Special constructor for binding which shows deprecate warning before calling the real constructor. Probably better to add comment for both static creators to illustrate that they're called in different scenarios. For this one, consider something like: // Called when BlobBuilder is instantiated in JS API. We show deprecate warning message. For next one, consider something like: // Called by Blob constructor ...
Kinuko Yasuda
Comment 7 2012-06-10 23:24:30 PDT
Note You need to log in before you can comment on or make changes to this bug.