Using BlobBuilder should show a deprecation warning message (if it is enabled) https://bugs.webkit.org/show_bug.cgi?id=88644

Reviewed by Jian Li.

Source/WebCore:

Mac has already disabled BlobBuilder, but Chromium still has it.
We should start showing a warning to let people migrate to using Blob constructor.

Tests: fast/files/blob-builder-crash.html

* fileapi/WebKitBlobBuilder.cpp:
(WebCore):
(WebCore::WebKitBlobBuilder::create):
* fileapi/WebKitBlobBuilder.h:
(WebCore):
(WebKitBlobBuilder):
* fileapi/WebKitBlobBuilder.idl:

LayoutTests:

* fast/files/blob-builder-crash-expected.txt:

Canonical link: https://commits.webkit.org/106592@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119956 268f45cc-cd09-0410-ab3c-d52691b4dbfc